--- a/sources/icons/Autodidactic Scholar_files/dark-mode-toggle.css
+++ b/sources/icons/Autodidactic Scholar_files/dark-mode-toggle.css
@@ -16,15 +16,15 @@
   height: 26px;
   width: 26px;
   left: 4px;
-  background-color: var(--secondary-color);
+  background-color: black;
   -webkit-transition: .4s;
   transition: .4s;
 }
 
 .slider-active {
   /* invert primary and secondary color */
-  background-color: var(--accent-color);
   background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   box-shadow: 0 0 1px var(--primary-color);
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
@@ -34,5 +34,4 @@
 /* Rounded sliders */
 .round {
   border-radius: 34px;
-  border: 2px solid var(--accent-color);
 }
