--- a/sources/icons/Autodidactic Scholar_files/home.css
+++ b/sources/icons/Autodidactic Scholar_files/home.css
@@ -13,18 +13,17 @@ body{
   background-color: var(--primary-color);
   margin: 0px;
 }
-h1{
-  font-size: 30px;
-}
 
 .main-content{
   display: flex;
-  position: relative;
+  position: fixed;
   top: 8vh;
   left: 7vw;
-  width: 86vw;
-  height: 100vh;
-  padding: 10px 0px 0px 0px;
+  width: 100%;
+  height: 100%;
+  padding: 50px 0px 0px 0px;
+  border-top: 2px solid var(--secondary-color);
+  border-left: 2px solid var(--secondary-color);
 }
 /* .main-content-dark{
   border-top: 2px solid var(--primary-color);
