--- a/css-styles/header.css
+++ b/css-styles/header.css
@@ -5,8 +5,9 @@
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-evenly;
   align-items: center;
-  top: 0;
-  bottom: 92vh;
+  top: 0px;
+  height: 8vh;
+  /* bottom: 92vh; */
   width: 100%;
   z-index: 1;
   border-bottom: 2px solid var(--secondary-color);
