--- a/css-styles/home.css
+++ b/css-styles/home.css
@@ -35,7 +35,7 @@ select{
   top: 8vh;
   left: 7vw;
   width: 93vw;
-  height: 100vh;
+  /* height: 100vh; */
 }
 /* .main-content-dark{
   border-top: 2px solid var(--primary-color);
