--- a/css-styles/tasks.css
+++ b/css-styles/tasks.css
@@ -1,7 +1,7 @@
 .tasks{
   position: relative;
   display: flex;
-  width: 73vw;
+  width: 72vw;
   flex-direction: column;
   align-items: center;
 }
@@ -18,6 +18,19 @@
   top: 25vh;
   border: 2px solid var(--accent-color);
   padding: 30px;
+}
+.initialise-reminder{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 40vw;
+  height: 40vh;
+  top: 17vh;
+  left: 14vw;
+  border: 2px solid var(--accent-color);
+  padding: 30px;
+  /* background-color: aqua; */
 }
 .create-list-input{
   display: flex;
@@ -41,21 +54,28 @@
 }
 
 .task-display-div{
-  margin-top: 50px;
   display: grid;
-  gap: 1px;
 }
 .task-display{
   display: grid;
-  grid-template-columns: 50px 80px 150px 150px 150px 150px;
+  grid-template-columns:  80px 1fr 150px 20px;
   justify-content: center;
   align-items: center;
   width: 100%;
-  border: 1px solid var(--accent-color);
+  height: 8vh;
+  font-size: 20px;
+  font-weight: bold;
+  border-bottom: 1px solid var(--accent-color);
 }
 .grid-section{
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+}
+.flex-section{
+  display: flex;
+  font-size: 16px;
+  font-weight: normal;
+  color: var(--accent-color);
 }
 
 .left-sidebar{
@@ -183,8 +203,9 @@
 }
 
 .tasks-ui{
+  position: relative;
   color: var(--secondary-color);
-  width: 73vw;
+  width: 72vw;
   height: 100vh;
 }
 .ui-header{
@@ -209,3 +230,33 @@
 .standard{
   background-color: blue;
 } */
+
+.task-creation-div{
+  position: absolute;
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 18px;
+  top: 8vh;
+  width: 100%;
+  /* background-color: aqua; */
+}
+
+.reference-div{
+
+  width: 50px;
+  height: 45px;
+}
+.absolute-div{
+  position: absolute;
+  left: 68.5vw;
+  top: 1.3vh;
+}
+.spaced-div{
+  margin-right: 5px;
+}
+.delete-buttons{
+  background-color: transparent;
+  border: 1px solid var(--secondary-color);
+  height: 50%;
+  font-weight: bold;
+}
