--- a/css-styles/tasks.css
+++ b/css-styles/tasks.css
@@ -16,8 +16,13 @@
   width: 40vw;
   height: 40vh;
   top: 25vh;
+  left: 25vw;
   border: 2px solid var(--accent-color);
   padding: 30px;
+  z-index: 100;
+  pointer-events: auto;
+  filter: none;
+  background-color: var(--primary-color);
 }
 .initialise-reminder{
   position: absolute;
@@ -27,10 +32,13 @@
   width: 40vw;
   height: 40vh;
   top: 17vh;
-  left: 14vw;
+  left: 25vw;
   border: 2px solid var(--accent-color);
   padding: 30px;
-  /* background-color: aqua; */
+  z-index: 100;
+  pointer-events: auto;
+  filter: none;
+  background-color: var(--primary-color);
 }
 .create-list-input{
   display: flex;
@@ -39,11 +47,29 @@
   font-size: 20px;
   font-weight: bold;
 }
+.create-list-input select{
+  font-size: 15px;
+  padding: 10px;
+}
 
 .input{
   font-size: 16px;
   padding: 10px;
   height: 50%;
+  color: var(--secondary-color);
+  margin-bottom: 0.5px;
+  border: 1px solid var(--secondary-color);
+}
+.input::placeholder{
+  color: var(--secondary-color);
+}
+.input-dark{
+  color-scheme: dark;
+}
+.input-color{
+  border: none;
+  height: 50px;
+  width: 50px;
 }
 
 .select,
@@ -51,6 +77,9 @@
   font-size: 16px;
   height: 100%;
   padding: 10px;
+  color: var(--secondary-color);
+  background-color: transparent;
+  border: 2px solid var(--accent-color);
 }
 
 .task-display-div{
